Fixed typo: "Hands on Workshops" is way more pornier than "Hands-on Workshops"

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ Member subscription tiers will be available for use of the workshop.
                     <div class="info-img">
                         <img src="themes/img/img-2.png">
                     </div>
-                    <h4>Hands on Workshops</h4>
+                    <h4>Hands-on Workshops</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p>
                 </div>
                 <div class="span4">
