Altered Team section to not use cards (not enough space) and added content.
Used 100 word bios for team members and placeholder pictures.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+:<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8">
@@ -99,80 +99,75 @@ Member subscription tiers will be available for use of the workshop.
 <div id="meetourteamSection">
 <div class="span6"><h1 class="cntr">MEET OUR TEAM</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p></div>
-<div class="container">	
-	
-<div class="tabbable tabs">
-<div class="tab-content label-primary">
-
-	<div class="tab-pane active" id="all">
-	<ul class="thumbnails">
-	
-		<li class="span4">
-			<div class="thumbnail">
-				<div class="blockDtl">
-				<a href="#" ><img src="themes/img/img-11.png" alt=""></a>
-                <h4>JOHN SMITH</h4>
+<div class="container">
+    <div class="row span12">
+        <div class="span4">
+            <img src="themes/img/img-10.png" alt="Daria Medved" />
+        </div>
+        <div class="span8">
+            <div class="inner">
+                <h4>Daria Medved</h4>
                 <h5>Creative Director</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. </p>
+                <p>
+Daria Medved is a Founder of Studio Cosplay with over 20 years of costuming experience. Her first cosplay was featured in Animerica, she won Best Armor at Dragon*Con’s Dawn Look-Alike contest, and has a comic book issue devoted to her. To support herself through college, she owned and operated a successful cosplay boutique, filling numerous costume commissions for the 501st. Daria specializes in pattern making, leather working, wig styling, prop making, resin, and sewing. She also Chairs Japan Now for DC’s Sakura Matsuri Festival and fights in her own costumes for Dagorhir.
+                </p>
                 <a class="facebook" href="#"></a>
-                    <a class="twitter" href="#"></a>
-                    <a class="pin" href="#"></a>
-				</div>
-			</div>
-		</li>
-		<li class="span4">
-			<div class="thumbnail">
-				<div class="blockDtl">
-				<a href="#"><img src="themes/img/img-11.png" alt=""></a>
-                <h4>JOHN SMITH</h4>
-                <h5>Creative Director</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. </p>
+                <a class="twitter" href="#"></a>
+                <a class="pin" href="#"></a>
+            </div>
+        </div>
+    </div>
+    <div class="row span12">
+        <div class="span4">
+            <img src="themes/img/img-10.png" alt="Liz Gmaz" />
+        </div>
+        <div class="span8">
+            <div class="inner">
+                <h4>Liz Gmaz</h4>
+                <h5>President</h5>
+<p>
+Liz Gmaz is an actress and cosplayer in the DC Metro Area and brings stage and film experience, as well as combat and stunt experience, to convention panels to help educate in posing, makeup, gun discipline, and more. She has been a costume designer for over six years and is a one of the Founders of Studio Cosplay. She’s an avid Podcaster and Marvel Funko Pop Collector. Liz has been featured on multiple media outlets for her Cosplay work and has appeared on many popular TV shows, including House of Cards. 
+</p>
                 <a class="facebook" href="#"></a>
-                    <a class="twitter" href="#"></a>
-                    <a class="pin" href="#"></a>
-				</div>
-			</div>
-		</li>
-		<li class="span4">
-			<div class="thumbnail">
-				<div class="blockDtl">
-				<a href="#"><img src="themes/img/img-11.png" alt=""></a>
-                <h4>JOHN SMITH</h4>
-                <h5>Creative Director</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. </p>
+                <a class="twitter" href="#"></a>
+                <a class="pin" href="#"></a>
+            </div>
+        </div>
+    </div>
+    <div class="row span12">
+        <div class="span4">
+            <img src="themes/img/img-10.png" alt="Sabrina Maizland" />
+        </div>
+        <div class="span8">
+            <div class="inner">
+                <h4>Sabrina Maizland</h4>
+                <h5>Vice President &amp; Treasurer</h5>
+<p>
+Sabrina Maizland has been cosplaying for five years and her Emma Frost has been featured on the front page of CNN.com. She is a Founder of Studio Cosplay and has been a panelist at many conventions, including San Diego Comic Con, Pheonix Comicon, and Dragon*Con. Her Worbla safety tutorial is published on Worbla.com and she is sponsored Cosplayer by Indie game developer FrogDice. Sabrina was also the Set Designer for the charity film “Browncoat Redemption,” which was endorsed by Joss Whedon.
+</p>
                 <a class="facebook" href="#"></a>
-                    <a class="twitter" href="#"></a>
-                    <a class="pin" href="#"></a>
-				</div>
-			</div>
-		</li>
-		<li class="span4">
-			<div class="thumbnail">
-				<div class="blockDtl">
-				<a href="#"><img src="themes/img/img-11.png" alt=""></a>
-                <h4>JOHN SMITH</h4>
-                <h5>Creative Director</h5>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. </p>
+                <a class="twitter" href="#"></a>
+                <a class="pin" href="#"></a>
+            </div>
+        </div>
+    </div>
+    <div class="row span12">
+        <div class="span4">
+            <img src="themes/img/img-10.png" alt="Stefanie Hackenberg" />
+        </div>
+        <div class="span8">
+            <div class="inner">
+                <h4>Stefanie Hackenberg</h4>
+                <h5>Secretary</h5>
+<p>
+Stefanie Hackenberg has been cosplaying since 1998, and has been featured on prominent media outlets such as CNN and io9. She is a Studio Cosplay Founder with experience in multiple media such as thermoplastics, leatherwork, wood, found objects and other materials.  When Stefanie is not role-playing someone else she is a Reiki Master-certified energy therapist, Certified Wine Professional, avid video gamer, and a proud all-around nerd.
+</p>
                 <a class="facebook" href="#"></a>
-                    <a class="twitter" href="#"></a>
-                    <a class="pin" href="#"></a>
-				</div>
-			</div>
-		</li>
-		
-			
-	</ul>
-   
-    
-	</div>
-	
-	
-	
-	
-
-	
-	
-</div>
+                <a class="twitter" href="#"></a>
+                <a class="pin" href="#"></a>
+            </div>
+        </div>
+    </div>
 </div>
 </div>
 </div>
