--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 	<link id="callCss" rel="stylesheet" href="themes/css/bootstrap.min.css" type="text/css" media="screen" charset="utf-8" />
 
 	<link id="callCss"rel="stylesheet" href="themes/css/style.css" type="text/css" media="screen" charset="utf-8" />
+        <link href='http://fonts.googleapis.com/css?family=Bubbler+One' rel='stylesheet' type='text/css'>
 	<link href="themes/css/bootstrap-responsive.min.css" rel="stylesheet">
 
 </head>
