Re-added green coloured Portfiolo section for visual tweak.  Adjusted Team section for staggered layout.
TODO: Update the menu anchors

--- a/index.html
+++ b/index.html
@@ -68,6 +68,16 @@ Member subscription tiers will be available for use of the workshop.
                 <a href="#" class="btn btn-large btn-primary">WATCH FOR OUR KICKSTARTER</a>
             </div>
             <hr class="soften clear"/>
+        </div>
+    </div>
+</div>
+
+<!-- Our Portfolio======================================== -->
+<div id="portfolioSection">
+    <div class="container">
+        <div class="row">
+            <h1>Our Lootz</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p></div>
             <div class="row-fluid">
                 <div class="span4">
                     <div class="info-img">
@@ -95,28 +105,28 @@ Member subscription tiers will be available for use of the workshop.
     </div>
 </div>
 
+<!-- Vision ======================================== -->
+<div id="blogSection"> 	
+    <div class="container">	
+        <div class="row">
+            <div class="inner">
+                <h1>What's going on right now</h1>
+                <p>
+This is where the vision statement is going to go.
+                </p>
+                <p>
+Something awesome about the latest update from the kickstart goes right here.
+                </p>
+            </div>
+        </div>
+    </div>
+</div>
+
 <!-- Meet our team======================================== -->
 <div id="meetourteamSection">
 <div class="span6"><h1 class="cntr">MEET OUR TEAM</h1>
 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p></div>
 <div class="container">
-    <div class="row span12">
-        <div class="span4">
-            <img src="themes/img/img-10.png" alt="Daria Medved" />
-        </div>
-        <div class="span8">
-            <div class="inner">
-                <h4>Daria Medved</h4>
-                <h5>Creative Director</h5>
-                <p>
-Daria Medved is a Founder of Studio Cosplay with over 20 years of costuming experience. Her first cosplay was featured in Animerica, she won Best Armor at Dragon*Con’s Dawn Look-Alike contest, and has a comic book issue devoted to her. To support herself through college, she owned and operated a successful cosplay boutique, filling numerous costume commissions for the 501st. Daria specializes in pattern making, leather working, wig styling, prop making, resin, and sewing. She also Chairs Japan Now for DC’s Sakura Matsuri Festival and fights in her own costumes for Dagorhir.
-                </p>
-                <a class="facebook" href="#"></a>
-                <a class="twitter" href="#"></a>
-                <a class="pin" href="#"></a>
-            </div>
-        </div>
-    </div>
     <div class="row span12">
         <div class="span4">
             <img src="themes/img/img-10.png" alt="Liz Gmaz" />
@@ -133,11 +143,9 @@ Liz Gmaz is an actress and cosplayer in the DC Metro Area and brings stage and f
                 <a class="pin" href="#"></a>
             </div>
         </div>
+        <hr class="soften clear"/>
     </div>
     <div class="row span12">
-        <div class="span4">
-            <img src="themes/img/img-10.png" alt="Sabrina Maizland" />
-        </div>
         <div class="span8">
             <div class="inner">
                 <h4>Sabrina Maizland</h4>
@@ -150,11 +158,30 @@ Sabrina Maizland has been cosplaying for five years and her Emma Frost has been 
                 <a class="pin" href="#"></a>
             </div>
         </div>
+        <div class="span4">
+            <img src="themes/img/img-10.png" alt="Sabrina Maizland" />
+        </div>
+        <hr class="soften clear"/>
     </div>
     <div class="row span12">
         <div class="span4">
-            <img src="themes/img/img-10.png" alt="Stefanie Hackenberg" />
+            <img src="themes/img/img-10.png" alt="Daria Medved" />
         </div>
+        <div class="span8">
+            <div class="inner">
+                <h4>Daria Medved</h4>
+                <h5>Creative Director</h5>
+                <p>
+Daria Medved is a Founder of Studio Cosplay with over 20 years of costuming experience. Her first cosplay was featured in Animerica, she won Best Armor at Dragon*Con’s Dawn Look-Alike contest, and has a comic book issue devoted to her. To support herself through college, she owned and operated a successful cosplay boutique, filling numerous costume commissions for the 501st. Daria specializes in pattern making, leather working, wig styling, prop making, resin, and sewing. She also Chairs Japan Now for DC’s Sakura Matsuri Festival and fights in her own costumes for Dagorhir.
+                </p>
+                <a class="facebook" href="#"></a>
+                <a class="twitter" href="#"></a>
+                <a class="pin" href="#"></a>
+            </div>
+        </div>
+        <hr class="soften clear"/>
+    </div>
+    <div class="row span12">
         <div class="span8">
             <div class="inner">
                 <h4>Stefanie Hackenberg</h4>
@@ -166,6 +193,9 @@ Stefanie Hackenberg has been cosplaying since 1998, and has been featured on pro
                 <a class="twitter" href="#"></a>
                 <a class="pin" href="#"></a>
             </div>
+        </div>
+        <div class="span4">
+            <img src="themes/img/img-10.png" alt="Stefanie Hackenberg" />
         </div>
     </div>
 </div>
@@ -283,7 +313,7 @@ Stefanie Hackenberg has been cosplaying since 1998, and has been featured on pro
        
                 <div class=" span4 socialicon">
                     <a class="icon2" href="mailto:contactstudiocosplay@gmail.com "></a>
-                    <a class="facebook" href="http://www.facebook.com/studiocosplay"></a>
+                    <a class="facebook" href="https://www.facebook.com/studiocosplay"></a>
                     <a class="twitter" href="http://www.twitter.com/Studio_Cosplay"></a>
                     <a class="html5" href="http://www.instagram.com/StudioCosplay/"></a>
                 </div>
@@ -320,11 +350,6 @@ Stefanie Hackenberg has been cosplaying since 1998, and has been featured on pro
 	});
 	
 	});
-	
-	
-	
-	
- 
 </script>
 
 </body>
