Updated "Our Lootz" descriptions

--- a/index.html
+++ b/index.html
@@ -83,21 +83,21 @@ Member subscription tiers will be available for use of the workshop.
                         <img src="themes/img/img-1.png">
                     </div>
                     <h4>Physical Creation Space</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p>
+                    <p>We aim to provide a physical space around the DC area for our members to have access to equipment such as sewing machines, sergers, airbrushes, 3D printers, vacuum form machines, heat guns/knives, etc. for cosplay creation and a green screen for photography.</p>
                 </div>
                 <div class="span4">
                     <div class="info-img">
                         <img src="themes/img/img-2.png">
                     </div>
                     <h4>Hands on Workshops</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p>
+                    <p>Our convention booths will be stocked with cosplay essentials like sewing notions, paints, adhesives, molding materials, etc. and will be available to our members for touchups and repairs.</p>
                 </div>
                 <div class="span4">
                     <div class="info-img">
                         <img src="themes/img/img-3.png">
                     </div>
                     <h4>Mobile Cosplay Support</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et quam est. Mauris faucibus tellus ac auctor posuere. </p>
+                    <p>Our convention booths will be stocked with cosplay essentials like sewing notions, paints, adhesives, molding materials, etc. and will be available to our members for touchups and repairs.</p>
                 </div>
             </div>
         </div>
