--- a/new.html
+++ b/new.html
@@ -22,25 +22,29 @@
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-    <div id="navigationSection" class="navbar-wrapper">
-        <div class="container">
-            <div class="navbar navbar-static-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <a class="navbar-brand" rel="#" title="Studio Cosplay" href="#"><object id="studio-cosplay-logo" type="image/svg+xml" data="img/studio-cosplay-logo.svg"></object></a>
-                    </div>
-                    <div class="navbar-collapse collapse">
-                        <ul class="nav navbar-nav">
-                        <li><a href="#myCarousel">Home</a></li>
-                        <li><a href="#whatWeDo">What We Do</a></li>
-                        <li><a href="#recentpostSection">Memberships</a></li>
-                        <li><a href="#contactSection">Contact Us</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+
+      <!-- Static navbar -->
+      <div id="navigationSection" class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" rel="#" title="Studio Cosplay" href="#"><object id="studio-cosplay-logo" type="image/svg+xml" data="img/studio-cosplay-logo.svg"></object></a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav navbar-right">
+                <li><a href="#myCarousel">Home</a></li>
+                <li><a href="#whatWeDo">What We Do</a></li>
+                <li><a href="#recentpostSection">Memberships</a></li>
+                <li><a href="#contactSection">Contact Us</a></li>
+            </ul>
+          </div><!--/.nav-collapse -->
+        </div><!--/.container-fluid -->
+      </div>
 
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
@@ -148,12 +152,7 @@
 
     <div class="row">
         <div class="col-md-4">
-            <object class="profile" type="image/svg+xml" data="img/liz-cosplay.svg">
-
-            </object>
-<!--
-            <img class="profile" src="img/liz-profile.svg" alt="Liz Gmaz" />
--->
+            <object alt="Liz Gmaz" class="profile" type="image/svg+xml" data="img/liz-profile.svg"></object>
         </div>
         <div class="col-md-8">
             <h4>Liz Gmaz</h4>
@@ -168,7 +167,7 @@ Liz Gmaz is an actress and cosplayer in the DC Metro Area and brings stage and f
     <hr />
     <div class="row">
         <div class="col-md-4 col-md-push-8">
-            <img class="profile" src="themes/img/img-10.png" alt="Sabrina Maizland" />
+            <object class="profile" type="image/svg+xml" data="img/liz-cosplay.svg"></object>
         </div>
         <div class="col-md-8 col-md-pull-4">
             <h4>Sabrina Maizland</h4>
@@ -183,7 +182,7 @@ Sabrina Maizland has been cosplaying for five years and her Emma Frost has been 
     <hr />
     <div class="row">
         <div class="col-md-4">
-            <img class="profile" src="themes/img/img-10.png" alt="Daria Medved" />
+            <object class="profile" type="image/svg+xml" data="img/stef-cosplay.svg"></object>
         </div>
         <div class="col-md-8">
             <h4>Daria Medved</h4>
