Carousel images fixed, css selector cleanup

--- a/index.html
+++ b/index.html
@@ -38,51 +38,51 @@
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#myCarousel">Home</a></li>
+                <li><a href="#home">Home</a></li>
                 <li><a href="#ourMission">Our Mission</a></li>
-                <li><a href="#meetourteamSection">Meet Our Team</a></li>
-                <li><a href="#contactSection">Contact Us</a></li>
+                <li><a href="#meetOurTeam">Meet Our Team</a></li>
+                <li><a href="#contactUs">Contact Us</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
       </div>
 
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div id="home" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-to-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-to-slide-to="1"></li>
-            <li data-target="#myCarousel" data-to-slide-to="2"></li>
-            <li data-target="#myCarousel" data-to-slide-to="3"></li>
+            <li data-target="#home" data-to-slide-to="0" class="active"></li>
+            <li data-target="#home" data-to-slide-to="1"></li>
+            <li data-target="#home" data-to-slide-to="2"></li>
+            <li data-target="#home" data-to-slide-to="3"></li>
         </ol>
 
         <div class="carousel-inner">
             <div class="item active">
-                <a href="http://animeusa.org/" target="_blank"><img src="img/meet-studio-cosplay.png" alt="Meet Studio Cosplay" /></a>
+                <a href="http://animeusa.org/" target="_blank"><img class="img-responsive" src="img/meet-studio-cosplay.png" alt="Meet Studio Cosplay" /></a>
             </div>
             <div class="item">
-                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img src="img/introduction-studio-cosplay.png" alt="Anime USA Panel: Introduction to Studio Cosplay" /></a>
+                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img class="img-responsive" src="img/introduction-studio-cosplay.png" alt="Anime USA Panel: Introduction to Studio Cosplay" /></a>
             </div>
             <div class="item">
-                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img src="img/lights-camera-cosplay.png" alt="Anime USA Panel: Lights, Camera, COSPLAY!" /></a>
+                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img class="img-responsive" src="img/lights-camera-cosplay.png" alt="Anime USA Panel: Lights, Camera, COSPLAY!" /></a>
             </div>
             <div class="item">
-                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img src="img/level-up-cosplay.png" alt="Anime USA Panel: Level Up Your Cosplay" /></a>
+                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img class="img-responsive" src="img/level-up-cosplay.png" alt="Anime USA Panel: Level Up Your Cosplay" /></a>
             </div>
         </div>
 
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" ></span></a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" ></span></a>
+        <a class="left carousel-control" href="#home" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" ></span></a>
+        <a class="right carousel-control" href="#home" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" ></span></a>
     </div>
 
-    <div id="ourMission">     
+    <div id="studioCosplay">     
         <div class="container">  
             <div class="row"> 
-                <div class="inner"> 
+                <div class="inner">
+                    <h1>Studio Cosplay</h1><br />
                     <p>Studio Cosplay is a non-profit organization (501(c)(3) status pending) located in the DC metro area that will be offering a studio makerspace in 2015 to cosplayers who need a place to work on their projects. We will provide various costume and prop-making equipment and will offer green screen space to photographers who would like to come in and work with cosplayers. Member subscription tiers will be available for use of the workshop.</p>
                     <p>We are currently scouting locations, creating our budget, and obtaining our 501(c)(3) status.</p>
                     <p>Check back on our website or like us on Facebook for updates on our status. And, watch for our Kickstarter in February 2015 or donate today!</p>
                     <p><a href="#blogSection" class="btn btn-large btn-primary">WATCH FOR OUR KICKSTARTER</a></p>
-                    <p>Or Donate Today!</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="52HTX9WFZX38W">
@@ -94,7 +94,7 @@
         </div> 
     </div> 
 
-    <div id="portfolioSection">
+    <div id="ourMission">
         <div class="container">
             <div class="row">
                 <h1>Our Mission</h1>
@@ -103,21 +103,21 @@
                     <div class="info-img">
                         <object type="image/svg+xml" data="img/studio.svg"></object>
                     </div>
-                    <h4>Studio</h4>
+                    <h2>Studio</h2>
                     <p>Physical creation space offering equipment and supplies for crafting cosplay, available for the DC area.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="info-img">
                         <object type="image/svg+xml" data="img/repair.svg"></object>
                     </div>
-                    <h4>Repair</h4>
+                    <h2>Repair</h2>
                     <p>Sanctum for on-site cosplay repairs, available at major cosplay conventions.</p>
                 </div>
                 <div class="col-md-4">
                     <div class="info-img">
                         <object type="image/svg+xml" data="img/instruction.svg"></object>
                     </div>
-                    <h4>Instruction</h4>
+                    <h2>Instruction</h2>
                     <p>Workshops to expand your costuming skills.</p>
                 </div>
             </div>
@@ -127,7 +127,11 @@
     <div id="blogSection">
         <div class="container">
             <div class="row">
+                <div class="inner">
+                    <h1>Watch for our Kickstarter</h1><br />
+<!--
                 <div class="col-md-12 cntr">
+-->
                     <p>
 Our Kickstarter campaign will launch Feb 2015 with the goal of raising enough money to cover first year’s expenses; including the physical space (rent, utilities, etc.), equipment (machines, tools, furniture, etc.), security / safety (site access, respirators, etc.), and administrative costs (website, insurance, Kickstarter rewards, etc.).
                     </p>
@@ -152,12 +156,14 @@ Currently, we are only accepting monetary donations. Once we have a physical spa
     </div>
 
 <!-- Meet our team======================================== -->
-<div id="meetourteamSection">
+<div id="meetOurTeam">
 <div class="container">
-<div class="row">
-    <div class="col-md-12 cntr">
-    <h1>Meet Our Team</h1>
-    <p>These are the people dedicated to bringing you Studio Cosplay.</p>
+    <div class="row">
+        <div class="col-md-12 cntr">
+            <h1>Meet Our Team</h1>
+            <p>These are the people dedicated to bringing you Studio Cosplay.</p>
+            <br />
+        </div>
     </div>
 
     <div class="row">
@@ -260,18 +266,12 @@ Stefanie Hackenberg has been cosplaying since 1998, and has been featured on pro
 </div>
 
 <!-- CONTACT US -->
-<div id="contactSection">
+<div id="contactUs">
     <div class="container">
         <div class="row">
             <div class="col-md-12 cntr">
                 <h1>We &lt;3 you, talk to us!</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-6">
                 <p>Have a great idea or a question? We'd love to hear it!</p>
-            </div>
-            <div class="col-md-6">
                 <form id="contact-us-form" role="form" action="https://docs.google.com/forms/d/1yljTsrO4C4cQwtQzoYCbXbkDkXeVxQXezf88qdGBGyQ/formResponse" method="POST">
                     <div class="form-group">
                         <label for="entry_100831364">Email Address:</label>
