Adjusted Carousel Indicators to be lower in phone mode, removed styles left over when navbar was variable height. Resized Logo portions to allow for crisper display

--- a/index.html
+++ b/index.html
@@ -297,13 +297,11 @@ Stefanie Hackenberg has been cosplaying since 1998, and has been featured on pro
                 <a class="html5" href="http://www.instagram.com/StudioCosplay/"></a>
             </div>
             <div class="col-sm-6 copyright">
-                <p>Copyright 2014 | Original Template by  <a href="http://www.tb3.co.in">tB3</a></p>
+                <p>Copyright 2014 | Template by  <a href="http://www.tb3.co.in">tB3</a></p>
             </div>
         </div>
     </div>
 </div>
-
-    <a href="#" class="go-top" ><i class="icon-arrow-up"></i></a>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
