silly fine tuning of homepage text highlights - silly fontface didn't have bold...

--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
                     <h1>Studio Cosplay</h1><br />
                     <p>Studio Cosplay is a non-profit organization (501(c)(3) status pending) located in the DC metro area that will be offering a studio makerspace in 2015 to cosplayers who need a place to work on their projects. We will provide various costume and prop-making equipment and will offer green screen space to photographers who would like to come in and work with cosplayers. Member subscription tiers will be available for use of the workshop.</p>
                     <p>We are currently scouting locations, creating our budget, and obtaining our 501(c)(3) status.</p>
-                    <p>Check back on our website or like us on Facebook for updates on our status. And, watch for our Kickstarter in February 2015 or donate today!</p>
+                    <p style="font-size: 25px;">Check back on our website or like us on Facebook for updates on our status. And, watch for our Kickstarter in February 2015 or donate today!</p>
+                    <br />
                     <p><a href="#blogSection" class="btn btn-large btn-primary">WATCH FOR OUR KICKSTARTER</a></p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
@@ -129,10 +130,7 @@
             <div class="row">
                 <div class="inner">
                     <h1>Watch for our Kickstarter</h1><br />
-<!--
-                <div class="col-md-12 cntr">
--->
-                    <p>
+                    <p style="font-size: 25px;">
 Our Kickstarter campaign will launch Feb 2015 with the goal of raising enough money to cover first year’s expenses; including the physical space (rent, utilities, etc.), equipment (machines, tools, furniture, etc.), security / safety (site access, respirators, etc.), and administrative costs (website, insurance, Kickstarter rewards, etc.).
                     </p>
                     <p>
