Fixed logo rendering poorly on iPhone.
The max-height rule wasn't being applied to the .svg since the id was missing.
However the navbar is a fixed height so it can't scale regardless, switched to .jpg

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" rel="#" title="Studio Cosplay" href="#"><object id="studio-cosplay-logo" type="image/svg+xml" data="img/studio-cosplay-logo.svg"></object></a>
+            <a class="navbar-brand" rel="#" title="Studio Cosplay" href="#"><img height="41" id="studio-cosplay-logo" src="img/studio-cosplay-logo.jpg" /></a>
           </div>
           <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav navbar-right">
