--- a/index.html
+++ b/index.html
@@ -47,32 +47,23 @@
         </div><!--/.container-fluid -->
       </div>
 
-    <div id="home" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-            <li data-target="#home" data-to-slide-to="0" class="active"></li>
-            <li data-target="#home" data-to-slide-to="1"></li>
-            <li data-target="#home" data-to-slide-to="2"></li>
-            <li data-target="#home" data-to-slide-to="3"></li>
-        </ol>
-
+    <div id="home" class="carousel slide" >
         <div class="carousel-inner">
             <div class="item active">
-                <a href="http://animeusa.org/" target="_blank"><img class="img-responsive" src="img/meet-studio-cosplay.png" alt="Meet Studio Cosplay" /></a>
-            </div>
-            <div class="item">
-                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img class="img-responsive" src="img/introduction-studio-cosplay.png" alt="Anime USA Panel: Introduction to Studio Cosplay" /></a>
-            </div>
-            <div class="item">
-                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img class="img-responsive" src="img/lights-camera-cosplay.png" alt="Anime USA Panel: Lights, Camera, COSPLAY!" /></a>
-            </div>
-            <div class="item">
-                <a href="http://animeusa.org/what-to-do/programming/" target="_blank"><img class="img-responsive" src="img/level-up-cosplay.png" alt="Anime USA Panel: Level Up Your Cosplay" /></a>
+                <div class="overflow-active">
+                    <img src="img/parade.png" alt="A Parade in Celebration!" />
+                </div>
+                <div class="container">
+                    <div class="carousel-caption ">
+                        <h1>Hooray!</h1>
+                        <p>We have submitted our 501(c)(3) filing with the help of Floyd Green Financial Services based out of Atlanta. We expect the filing status to take between six and eight weeks to complete. We will continue to work during this time to prepare for our Kickstarter and accept feedback from the community.</p>
+                        <p>There are a lot of good things out of Atlanta, like Dragon*Con!</p>
+                    </div>
+                </div>
             </div>
         </div>
-
-        <a class="left carousel-control" href="#home" role="button" data-slide="prev"><span class="glyphicon glyphicon-chevron-left" ></span></a>
-        <a class="right carousel-control" href="#home" role="button" data-slide="next"><span class="glyphicon glyphicon-chevron-right" ></span></a>
     </div>
+
 
     <div id="studioCosplay">     
         <div class="container">  
